<?xml version="1.0"?>
<package>
  <name>vaisala_xml</name>
  <version>1.0.0</version>
  <description>The vaisala_xml package can pull weather infomations from VAISALA weather API</description>
  <maintainer email="foadhaji@buffalo.edu">Foad Hajiaghajani</maintainer>
  <license>self</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vaisala_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>vaisala_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
